--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ commit = True
 tag = True
 
 [metadata]
-name = sbgecom
-version = attr: sbgecom.__version__
+name = gnss
+version = attr: gnss.__version__
 description = GNSS packages
 long_description = file: README.md, LICENSE.txt
 author = Brice Saussay
@@ -28,9 +28,8 @@ package_dir =
 	=src
 packages = find:
 install_requires = 
-	b64encode,
-	HTTPConnection,
-	HTTPSConnection
+	requests>=2.7.0
+	pandas>=1.3.5
 
 [options.packages.find]
 where = src
