--- a/tox.ini
+++ b/tox.ini
@@ -13,18 +13,15 @@ commands =
 	mkdir -p {toxinidir}/reports/tests
 	pytest tests --html={toxinidir}/reports/tests/pytests-{envname}.html 
 deps =
-    pytest
-    pytest-cov
-	pytest-html
+	-r {toxinidir}/requirements_dev.txt
 whitelist_externals = mkdir
 
 [testenv:coverage]
 commands = 
 	mkdir -p {toxinidir}/reports/coverage
-	pytest tests --cov-report=html:{toxinidir}/reports/coverage --cov-append --cov={envsitepackagesdir}/sbgecom
+	pytest tests --cov-report=html:{toxinidir}/reports/coverage --cov-append --cov={envsitepackagesdir}/gnss
 deps =
-    pytest
-    pytest-cov
+	-r {toxinidir}/requirements_dev.txt
 whitelist_externals = mkdir
 
 [testenv:lint]
@@ -32,6 +29,5 @@ commands =
 	mkdir -p {toxinidir}/reports/flake8
 	flake8 --format=html --htmldir={toxinidir}/reports/flake8 --per-file-ignores="__init__.py:F401" src
 deps=
-	flake8
-	flake8-html
+	-r {toxinidir}/requirements_dev.txt
 whitelist_externals = mkdir
