--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ author_email = brice.saussay@outlook.fr
 url = http://github.com/bsaussay/gnss.git
 license_files = LICENSE.txt
 platforms = unix, linux, osx, cygwin, win32
-keywords = sbg, ecom
+keywords = gnss ntrip rtcm
 classifiers = 
 	Programming Language :: Python :: 3
 	Programming Language :: Python :: 3 :: Only
